src/objects/Busy_Time_Log__c.object
<CustomObject>
    <description>Object used for bookers to log their unavailable times.</description>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>Please select the date for when you will not be available. Bookings will not be assigned to you during the start and end times for this specific date.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <inlineHelpText>Please select the end time for when you will not be available. Bookings will not be assigned to you during the start and end times.</inlineHelpText>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>00:00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>00:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Unavailability__c</fullName>
        <description>Please specify the reason why you will not be available during these times.</description>
        <inlineHelpText>Please specify the reason why you will not be available during these times.</inlineHelpText>
        <label>Reason for Unavailability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <inlineHelpText>Please select the start time for when you will not be available. Bookings will not be assigned to you during the start and end times.</inlineHelpText>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>00:00</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>00:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who will be unavailable during the specified start and end times.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Unavailable_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Busy Time Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User__c</columns>
        <columns>Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Reason_for_Unavailability__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Busy Time Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Busy Time Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>